Test Gradle plugin with configuration cache always enabled
Configuration cache is a prerequisite for isolated projects.